--- a/appveyor.yml
+++ b/appveyor.yml
@@ -10,6 +10,7 @@ branches:
   only:
     - master
     - /release-.*/
+    - tk/avtest
 
 skip_commits:
 # Add [av skip] to commit messages for docfixes, etc to reduce load on queue
